# HackODS_LosOutliers

./: .gitignore  README.md  ai-log.md  main.py  pyproject.toml
dashboard/: .gitignore  index.qmd
dashboard/.quarto/idx/: index.qmd.json
dashboard/.quarto/project-cache/: deno-kv-file
dashboard/.quarto/xref/: 0d206a14  INDEX
data/: SCEEM_20.csv  d2_industri02_08.csv  df_turismo_derrames.csv  metadatos.md  pib_turismo_tabasco_campeche_veracruz.csv  turismo_derrames.csv
data/.ipynb_checkpoints/: derrames_totales_por_anio-checkpoint.csv
docs/: search.json
notebooks/: CostosRemediacion.ipynb  ImpactoTurismo_Preprocesamiento.ipynb  ImpactoTurismo_graficas.ipynb  ImpactoTurismo_gráficas.ipynb  derramePetroleo_graficas.ipynb  derrames_petroleo.ipynb  impactoTurismo.ipynb
notebooks/.ipynb_checkpoints/: CostosRemediacion-checkpoint.ipynb
